[project]
name = "autonomous_stock_analysis_opportunity_detection"
version = "0.1.0"
description = "autonomous_stock_analysis_opportunity_detection using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.8.0",
]

[project.scripts]
autonomous_stock_analysis_opportunity_detection = "autonomous_stock_analysis_opportunity_detection.main:run"
run_crew = "autonomous_stock_analysis_opportunity_detection.main:run"
train = "autonomous_stock_analysis_opportunity_detection.main:train"
replay = "autonomous_stock_analysis_opportunity_detection.main:replay"
test = "autonomous_stock_analysis_opportunity_detection.main:test"
run_with_trigger = "autonomous_stock_analysis_opportunity_detection.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
